Import patches-unapplied version 5.3.1-4 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 1729c80010462fd4094905a26bb5fa731bb5133b

New changelog entries:
  * Update to SVN 20151219 (r231847, 5.3.1) from the gcc-5-branch.
  * Fix cross-building without having the common cross libraries installed.
  * Update ada-m68k patch.
  * Allow unstripped, non-optimized debug builds with setting DEB_BUILD_OPTIONS
    including gccdebug.
  * Remove obsolete libgccmath packaging support.
  * Define SONAME macros whether the libraries are built or not.
  * Update the Linaro support to the 5-2015.12 snapshot (revert the backport
    for PR target/63870 (ARM32) causing regressions).
  * Set target tools and build dependencies for cross builds.
  * Build gdc on sh4.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -212,11 +212,11 @@ else
   endif
 endif
 ifeq ($(DEB_CROSS),yes)
-  BINUTILS_BUILD_DEP = binutils$(TS) (>= $(BINUTILSBDV)), binutils-multiarch (>= $(BINUTILSBDV))
+  BINUTILS_BUILD_DEP = binutils$(TS)$(NT) (>= $(BINUTILSBDV)), binutils-multiarch$(NT) (>= $(BINUTILSBDV))
   BINUTILSV := $(shell dpkg -l binutils$(TS) \
 			| awk '/^ii/{print $$3;exit}' | sed 's/-.*//')
 else
-  BINUTILS_BUILD_DEP = binutils (>= $(BINUTILSBDV)) | binutils-multiarch (>= $(BINUTILSBDV))
+  BINUTILS_BUILD_DEP = binutils$(NT) (>= $(BINUTILSBDV)) | binutils-multiarch$(NT) (>= $(BINUTILSBDV))
   ifneq (,$(findstring cross-build-,$(build_type)))
     BINUTILSV := $(shell dpkg -l binutils$(TS) \
 			| awk '/^ii/{print $$3;exit}' | sed 's/-.*//')
@@ -226,10 +226,10 @@ else
   endif
 endif
 ifneq (,$(filter $(build_type), build-native cross-build-native))
-  ifeq ($(hppa64_archs),hppa))
-    BINUTILS_BUILD_DEP += , binutils-hppa64 (>= $(BINUTILSBDV)) [$(hppa64_archs)]
+  ifeq ($(hppa64_archs),hppa)
+    BINUTILS_BUILD_DEP += , binutils-hppa64$(NT) (>= $(BINUTILSBDV)) [$(hppa64_archs)]
   else
-    BINUTILS_BUILD_DEP += , binutils-hppa64-linux-gnu (>= $(BINUTILSBDV)) [$(hppa64_archs)]
+    BINUTILS_BUILD_DEP += , binutils-hppa64-linux-gnu$(NT) (>= $(BINUTILSBDV)) [$(hppa64_archs)]
   endif
 endif
 ifeq (,$(BINUTILSV))
@@ -361,8 +361,8 @@ endif
 
 # needed for the include/asm symlink to run the testsuite for
 # non default multilibs
-GCC_MULTILIB_BUILD_DEP = g++-multilib [$(multilib_archs)],
-GCC_MULTILIB_BUILD_DEP += g++-4.9 [arm64],
+GCC_MULTILIB_BUILD_DEP = g++-multilib [$(multilib_archs)]$(pf_ncross),
+GCC_MULTILIB_BUILD_DEP += g++-4.9 [arm64]$(pf_ncross),
 
 LIBUNWIND_DEV_DEP := libunwind7-dev$(LS)$(AQ) (>= 0.98.5-6)
 LIBUNWIND_BUILD_DEP := $(LIBUNWIND_DEV_DEP) [ia64],
@@ -412,7 +412,57 @@ ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
 endif
 
 ifneq ($(DEB_CROSS),yes)
-JAVA_BUILD_DEP := zlib1g-dev, libantlr-java, python, libffi-dev,
+# all archs for which to create b-d's
+any_archs = alpha amd64 armel armhf arm64 i386 mips mipsel mips64 mips64el powerpc ppc64 ppc64el m68k sh4 sparc64 s390x x32
+arch_gnutype_map = \
+	alpha=alpha-linux-gnu \
+	amd64=x86-64-linux-gnu \
+	armel=arm-linux-gnueabi \
+	armhf=arm-linux-gnueabihf \
+	arm64=aarch64-linux-gnu \
+	i386=i686-linux-gnu \
+	mips=mips-linux-gnu \
+	mipsel=mipsel-linux-gnu \
+	mips64=mips64-linux-gnuabi64 \
+	mips64el=mips64el-linux-gnuabi64 \
+	powerpc=powerpc-linux-gnu \
+	ppc64=powerpc64-linux-gnu \
+	ppc64el=powerpc64le-linux-gnu \
+	m68k=m68k-linux-gnu \
+	sh4=sh4-linux-gnu \
+	sparc64=sparc64-linux-gnu \
+	s390x=s390x-linux-gnu \
+	x32=x86-64-linux-gnux32
+
+_element = $(filter $1=%,$(arch_gnutype_map))
+_gnu_type = $(subst $1=,,$(filter $1=%,$(arch_gnutype_map)))
+
+ifneq (,$(filter $(distrelease),lenny etch squeeze wheezy wheezy dapper hardy jaunty karmic lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid))
+  TARGET_TOOL_BUILD_DEP = bash, # non-empty line
+  pf_cross =
+  pf_ncross =
+else
+  TARGET_TOOL_BUILD_DEP = \
+	$(foreach a, $(any_archs), \
+	  g++-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>, \
+	  $(if $(filter $(a), avr),, \
+	    gobjc-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>,) \
+	  gfortran-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>, \
+	  $(if $(filter $(a), avr),, \
+	    gcj-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>,) \
+	  $(if $(filter $(a), s390 sh4),, \
+	    gdc-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>,) \
+	  $(if $(filter $(a), hppa m68k sh4),, \
+	    gccgo-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>,) \
+	  $(if $(filter $(a), m68k mips64 powerpcspe sh4 sparc64 x32),, \
+	    gnat-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>,) \
+	)
+  pf_cross = $(SPACE)<cross>
+  pf_ncross = $(SPACE)<!cross>
+  NT = :native
+endif
+
+JAVA_BUILD_DEP := zlib1g-dev, libantlr-java, python$(NT), libffi-dev,
 
 ifeq ($(PKGSOURCE),gcj-$(BASE_VERSION))
   bd_java_archs =
@@ -483,13 +533,13 @@ GO_BUILD_DEP := netbase,
 
 # try to build with itself, or with the last version
 ifneq (,$(filter $(distrelease), jessie))
-  gnat_build_dep := gnat-4.9 [$(ada_no_archs)], g++-4.9
+  gnat_build_dep := gnat-4.9$(NT) [$(ada_no_archs)], g++-4.9$(NT)
 else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily xenial))
-  gnat_build_dep := gnat-5 [$(ada_no_archs)], g++-5
+  gnat_build_dep := gnat-5$(NT) [$(ada_no_archs)], g++-5$(NT)
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
 else
-  gnat_build_dep := gnat [$(ada_no_archs)]
+  gnat_build_dep := gnat$(NT) [$(ada_no_archs)]
 endif
 
 ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
@@ -531,6 +581,7 @@ else ifeq ($(PKGSOURCE),gccgo-$(BASE_VERSION))
   JAVA_BUILD_INDEP :=
   GDC_BUILD_DEP := $(SOURCE_BUILD_DEP)
 endif
+
 
 else
 # build cross compiler
@@ -577,7 +628,6 @@ DEB_SOEVERSION		:= $(EPOCH):5
 DEB_STDCXX_SOVERSION	:= 5
 DEB_GCJ_SOVERSION	:= 5
 DEB_GOMP_SOVERSION	:= $(DEB_SOVERSION)
-DEB_GCCMATH_SOVERSION	:= $(DEB_SOVERSION)
 
 DEB_GCC_VERSION := $(DEB_VERSION)
 DEB_GCJ_VERSION := $(DEB_VERSION)
@@ -639,12 +689,14 @@ ctrl_flags += \
 	-DSOURCE_BUILD_DEP="$(SOURCE_BUILD_DEP)" \
 	-DCROSS_BUILD_DEP="$(CROSS_BUILD_DEP)" \
 	-DGCC_MULTILIB_BUILD_DEP='$(GCC_MULTILIB_BUILD_DEP)' \
+	-DTARGET_TOOL_BUILD_DEP='$(TARGET_TOOL_BUILD_DEP)' \
 	-DMULTILIB_ARCHS="$(multilib_archs)" \
 	-DNEON_ARCHS="$(neon_archs)" \
 	-DTP=$(TP) \
 	-DTS=$(TS) \
 	-DLS=$(LS) \
-	-DAQ=$(AQ)
+	-DAQ=$(AQ) \
+	-DNT=$(NT)
 
 ifeq ($(DEB_CROSS),yes)
   ctrl_flags += \
@@ -981,7 +1033,6 @@ control-file:
 	  -DGNAT_V=$(GNAT_VERSION) \
 	  -DPHOBOS_V=$(libphobos_version) \
 	  -DGOMP_SO=$(GOMP_SONAME) \
-	  -DGCCMATH_SO=$(GCCMATH_SONAME) \
 	  -DITM_SO=$(ITM_SONAME) \
 	  -DATOMIC_SO=$(ATOMIC_SONAME) \
 	  -DBTRACE_SO=$(BTRACE_SONAME) \
@@ -1295,7 +1346,6 @@ parameters-file:
 		echo 'PKG_GCJ_EXT	:= $(PKG_GCJ_EXT)'; \
 		echo 'PKG_LIBGCJ_EXT	:= $(PKG_LIBGCJ_EXT)'; \
 		echo 'DEB_GOMP_SOVERSION	:= $(DEB_GOMP_SOVERSION)'; \
-		echo 'DEB_GCCMATH_SOVERSION	:= $(DEB_GCCMATH_SOVERSION)'; \
 		echo 'GCC_SONAME	:= $(GCC_SONAME)'; \
 		echo 'CXX_SONAME	:= $(CXX_SONAME)'; \
 		echo 'FORTRAN_SONAME	:= $(FORTRAN_SONAME)'; \
@@ -1317,8 +1367,7 @@ parameters-file:
 		echo 'VTV_SONAME	:= $(VTV_SONAME)'; \
 		echo 'CILKRTS_SONAME	:= $(CILKRTS_SONAME)'; \
 		echo 'MPX_SONAME	:= $(MPX_SONAME)'; \
-		echo 'QMATH_SONAME	:= $(QUADMATH_SONAME)'; \
-		echo 'GCCMATH_SONAME	:= $(GCCMATH_SONAME)'; \
+		echo 'QUADMATH_SONAME	:= $(QUADMATH_SONAME)'; \
 		echo 'GO_SONAME		:= $(GO_SONAME)'; \
 		echo 'CC1_SONAME	:= $(CC1_SONAME)'; \
 		echo 'GCCJIT_SONAME	:= $(GCCJIT_SONAME)'; \
