Import patches-unapplied version 5.3.1-16 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 815205b443ee7a06ba05da00a416b72192516af6

New changelog entries:
  * Update to SVN 20160424 (r235395, 5.3.1) from the gcc-5-branch.
  * Stop building libcc1 and libgccjit0, when not building common libs.
  * Stop building libraries built by GCC 6.
  * Explicitly build-depend on libgraphite2-dev to work-around #822432.
  * Bump standards version to 3.9.8.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -481,7 +481,7 @@ ifneq (,$(java_awt_peers))
   endif
   JAVA_BUILD_DEP += libasound2-dev [$(java_no_archs) $(linux_no_archs)],
   ifneq (,$(findstring gtk,$(java_awt_peers)))
-    JAVA_BUILD_DEP += libxtst-dev$(bd_java_archs), libxt-dev$(bd_java_archs), libgtk2.0-dev (>= 2.4.4-2)$(bd_java_archs), libart-2.0-dev$(bd_java_archs), libcairo2-dev$(bd_java_archs),
+    JAVA_BUILD_DEP += libxtst-dev$(bd_java_archs), libxt-dev$(bd_java_archs), libgtk2.0-dev (>= 2.4.4-2)$(bd_java_archs), libart-2.0-dev$(bd_java_archs), libcairo2-dev$(bd_java_archs), libgraphite2-dev$(bd_java_archs),
   endif
   ifneq (,$(findstring qt,$(java_awt_peers)))
     JAVA_BUILD_DEP += libqt4-dev (>= 4.1.0)$(bd_java_archs),
@@ -534,7 +534,7 @@ GO_BUILD_DEP := netbase,
 # try to build with itself, or with the last version
 ifneq (,$(filter $(distrelease), jessie))
   gnat_build_dep := gnat-4.9$(NT) [$(ada_no_archs)], g++-4.9$(NT)
-else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily xenial))
+else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily xenial yakkety))
   gnat_build_dep := gnat-5$(NT) [$(ada_no_archs)], g++-5$(NT)
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
@@ -882,6 +882,9 @@ ifeq ($(with_libqmath),yes)
   addons += $(if $(findstring armhf,$(biarchsfarchs)),libsfqmath)
 endif
 ifeq ($(with_jit),yes)
+  addons += jit
+endif
+ifeq ($(with_libgccjit),yes)
   addons += libjit
 endif
 ifeq ($(with_libcc1),yes)
