Import patches-unapplied version 5.3.1-18 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 8ca779f19b8abcef8ba3c9fa3678032b2c7bbe72

New changelog entries:
  * Update to SVN 20160509 (r236033, 5.3.1) from the gcc-5-branch.
    - Fix PR tree-optimization/70526, PR c++/70635, PR ada/70969,
      PR libgfortran/70684, PR target/60290 (Solaris).
  * Call dh_makeshlibs with the --noscripts option when building a
    cross compiler.
  * Fix building cross gnat libs when not building the common libs.
  * Fix building cross mips* multilibs when not building the common libs.
  * Remove old go escape analysis code, removed upstream.
  * Avoid empty architecture lists in build dependencies. Addresses: #823280.
  * Tighten debhelper build dependency for cross build dependencies.
  * Silence some lintian warnings for libstdc++-doc.
  * Allow build dependencies for musl configurations (Helmut Grohne).
    Addresses: #823769.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -256,6 +256,11 @@ ifeq ($(DEB_TARGET_ARCH_OS),linux)
   else
     LIBC_DEP = libc6
   endif
+  ifneq (,$(findstring musl-linux-,$(DEB_TARGET_ARCH)))
+    LIBC_DEP = musl
+    libc_ver = 0.9
+    libc_dev_ver = 0.9
+  endif
 else
   ifeq ($(DEB_TARGET_ARCH_OS),hurd)
     LIBC_DEP = libc0.3
@@ -361,7 +366,9 @@ endif
 
 # needed for the include/asm symlink to run the testsuite for
 # non default multilibs
-GCC_MULTILIB_BUILD_DEP = g++-multilib [$(multilib_archs)]$(pf_ncross),
+ifneq (,$(multilib_archs))
+  GCC_MULTILIB_BUILD_DEP = g++-multilib [$(multilib_archs)]$(pf_ncross),
+endif
 GCC_MULTILIB_BUILD_DEP += g++-5 [arm64]$(pf_ncross),
 
 LIBUNWIND_DEV_DEP := libunwind7-dev$(LS)$(AQ) (>= 0.98.5-6)
@@ -438,10 +445,12 @@ _element = $(filter $1=%,$(arch_gnutype_map))
 _gnu_type = $(subst $1=,,$(filter $1=%,$(arch_gnutype_map)))
 
 ifneq (,$(filter $(distrelease),lenny etch squeeze wheezy wheezy dapper hardy jaunty karmic lucid maverick natty oneiric precise quantal raring saucy trusty utopic vivid))
+  DEBHELPER_BUILD_DEP = debhelper (>= 9),
   TARGET_TOOL_BUILD_DEP = bash, # non-empty line
   pf_cross =
   pf_ncross =
 else
+  DEBHELPER_BUILD_DEP = debhelper (>= 9.20141010),
   TARGET_TOOL_BUILD_DEP = \
 	$(foreach a, $(any_archs), \
 	  g++-$(BASE_VERSION)-$(call _gnu_type,$(a)) [$(a)] <cross>, \
@@ -685,6 +694,7 @@ ctrl_flags += \
 	-DGMP_BUILD_DEP="$(GMP_BUILD_DEP)" \
 	-DMPFR_BUILD_DEP="$(MPFR_BUILD_DEP)" \
 	-DMPC_BUILD_DEP="$(MPC_BUILD_DEP)" \
+	-DDEBHELPER_BUILD_DEP="$(DEBHELPER_BUILD_DEP)" \
 	-DDPKG_BUILD_DEP="$(DPKG_BUILD_DEP)" \
 	-DSOURCE_BUILD_DEP="$(SOURCE_BUILD_DEP)" \
 	-DCROSS_BUILD_DEP="$(CROSS_BUILD_DEP)" \
