Import patches-unapplied version 5.4.0-5 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 009b036d6d248ff5066a166dfbbc2ec8ed493669

New changelog entries:
  [ Matthias Klose ]
  * Add AArch64 Vulcan cpu support, backport from trunk. LP: #1594452.
  * Revert a libstdc++ header reorg done after the 5.3.0 release (only for
    OS releases including a GCC 5 at release time).
  * Enforce build using binutils 2.26.1 for unstable/development series.
  * Mark cross compilers as M-A: foreign. Addresses: #827136.
  * Remove the MIPS r6 support again, dak doesn't like unknown architectures.
  [ Aurelien Jarno ]
  * Drop support for loongson 2f (YunQiang Su). Closes: #827554. 
  * Apply proposed patch from Matthew Fortune to fix libjava on mips64el.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -208,7 +208,7 @@ else
   else ifneq (,$(filter $(distrelease),jessie))
     BINUTILSBDV = 2.25-7~
   else ifneq (,$(filter $(distrelease),sid stretch xenial))
-    BINUTILSBDV = 2.25.90
+    BINUTILSBDV = 2.26.1
   endif
 endif
 ifeq ($(DEB_CROSS),yes)
@@ -305,7 +305,7 @@ ifneq (,$(findstring yes,$(biarch64) $(biarch32) $(biarchn32) $(biarchx32)$(biar
   endif
   endif
   # mips*
-  ifneq (,$(findstring $(DEB_TARGET_ARCH),mips mipsel mipsn32 mipsn32el mips64 mips64el))
+  ifneq (,$(findstring mips,$(DEB_TARGET_ARCH)))
   ifeq ($(biarchn32)$(biarch32),yesyes)
       LIBC_BIARCH_DEV_DEP := libc6-dev-mips32$(LS)$(AQ) (>= $(libc_ver)), libc6-dev-mipsn32$(LS)$(AQ) (>= $(libc_ver))
   endif
